--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,12 @@
 </head>
 <body>
     <h1>Hello from a static file</h1>
+
+    <form action="/submit" method="POST">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required>
+        <button type="submit">Submit</button>
+    </form>
+    
 </body>
 </html>
